--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,11 @@ dependencies:
   rename: ^2.0.1
   change_app_package_name: ^1.1.0
   path_provider: ^2.0.11
+  flutter_downloader: ^1.9.1
   path: ^1.8.3
+  permission_handler: ^10.0.0
+  android_path_provider: ^0.3.0
+  device_info_plus: ^8.0.0
 #  dynamic_widget: ^4.0.5
   dynamic_widget:
     path: plugins/flutter_dynamic_widget
